--- a/src/Grafica/Login_ventana.form
+++ b/src/Grafica/Login_ventana.form
@@ -231,7 +231,7 @@
         <Component class="javax.swing.JLabel" name="logo">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/logoSDFA_1_1.gif"/>
+              <Image iconType="3" name="/imagenes/logoSDFA_3.gif"/>
             </Property>
           </Properties>
           <Constraints>
